force-app/main/default/objects/Account/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Secondary Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>