force-app/main/default/objects/Account/fields/Customer_Opt_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opt_In_Type__c</fullName>
    <label>Customer Opt In Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue/Common</fullName>
            </value>
            <value>
                <fullName>Red/Common</fullName>
            </value>
            <value>
                <fullName>Blue/Red/Common</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>