force-app/main/default/objects/Account/fields/DELTA_Loyalty_Member__c.field-meta.xml
<CustomField>
    <fullName>DELTA_Loyalty_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>