force-app/main/default/objects/Account/fields/New_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Opt_in_Date__c</fullName>
    <label>New Opt in Date</label>
    <type>Date</type>
</CustomField>