force-app/main/default/objects/Account/fields/Old_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Opt_in_Date__c</fullName>
    <label>Old Opt in Date</label>
    <type>Date</type>
</CustomField>