force-app/main/default/objects/Account/fields/Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Sensitive__c</fullName>
    <formula>Sensitive__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sensitive</label>
    <type>Checkbox</type>
</CustomField>