force-app/main/default/objects/Account/validationRules/Salutation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salutation_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Permission.Integration_User)
  &amp;&amp; ISPICKVAL(Preferred_Language__pc , &apos;German&apos;)
  &amp;&amp; ISBLANK(TEXT(Salutation))</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Please populate the Salutation</errorMessage>
</ValidationRule>